--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,38 @@
-.App {
-  text-align: center;
+:root {
+  --primary: #7DC8E8;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 20px 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.app__initial-question-area {
+  width: 80%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__textarea {
+  min-height: 50px;
+  outline: none;
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.app__button {
+  width: auto;
+  font-size: 18px;
+  padding: 10px 10px;
+  background-color: var(--primary);
+  cursor: pointer;
+  border-radius: 5px;
+  box-sizing: none;
+  border: none;
+  outline: none;
+  align-self: flex-start;
 }
